# mcp-server-wildberries

./: .gitignore  CLAUDE.md  README.md  development.md  maintainer.md  pyproject.toml  server.json
.github/workflows/: test.yml
docs/: advertising.md  analytics.md  communications.md  content.md  dbs_orders.md  dbw_orders.md  fbs_orders.md  fbw_supplies.md  finance.md  general.md  pickup_orders.md  reports.md  tariffs.md  wbd.md
src/mcp_server_wildberries/: __init__.py  _shared.py  actions.py  cli.py  models.py  server.py  wb_api.py
src/mcp_server_wildberries/tools/: advertising.py
tests/: conftest.py  test_cli.py  test_mcp_advertising.py  test_mcp_analytics.py  test_mcp_communications.py  test_mcp_content.py  test_mcp_dbs_orders.py  test_mcp_dbw_orders.py  test_mcp_fbs_orders.py  test_mcp_fbw_supplies.py  test_mcp_finance.py  test_mcp_general.py  test_mcp_pickup_orders.py  test_mcp_reports.py  test_mcp_tariffs.py  test_mcp_wbd.py  test_search_execute.py
