[project]
name = "mcp-server-wildberries"
version = "0.1.1"
description = "MCP server for Wildberries Seller API — products, orders, supplies, analytics, advertising"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28",
]

[project.scripts]
mcp-server-wildberries = "mcp_server_wildberries:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_wildberries"]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.21", "anyio>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
